style.css
.infos-container{

    z-index: 10;
    position: absolute;
    width: 30vw;
    color: white;
    border-radius: 40px;
   top: 60px;
   left: 60px;
   border-radius: 10px;
   align-items: center;
   justify-content: center;
   padding: 30px;

 
}

.hidden{
    display: none;
}

.glass-effect{background: rgba(255, 255, 255, 0.1);
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    border: 1px solid rgba(255, 255, 255, 0.3);}

h1{
    margin-top: 20px;
    margin-left: 20px;
    font-size: 30px;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: normal;

}
h2{margin-top: 20px;
    margin-left: 20px;
    font-size: 20px;}
p{margin-top: 20px;
    margin-left: 20px;
    font-size: 20px;}

*{
    background-color: none;  
    font-family: "Poppins", sans-serif;

}

.vue-ensemble-button{
    position: absolute;
    top: 60px;
    right: 60px;
    color: white;
    z-index: 100;
    padding: 20px;
    border-radius: 60px;
    font-size: 1rem;
    font-weight: 200;
}

.vue-ensemble-button:hover{
    background-color: white;
    color: black;

}

td{
    padding: 1rem;
}

td{
    border: 0;
    color: rgba(255, 255, 255, 0.656);
    display: table-cell;
    font-size: 1rem;
    line-height: 1.5rem;
    padding: 1rem;
    text-align: left;
    vertical-align: middle;
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
    font-family: "Poppins", sans-serif;
    font-weight: 200;
    font-style: normal;

}

#no-underline{
    border-bottom: 0px;
}

tr{
    border-bottom: 1px solid rgba(255, 255, 255, 0.656);
}



.renderer{
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
}


@media (max-width: 700px) {

    td{
        font-size: 0.5rem;
        line-height: 0.75rem;
        padding: 0.5rem;
    }
    h1{font-size: 15px};
    h2{font-size: 10px};
    p{font-size: 10px};



    .infos-container{

        z-index: 10;
        position: absolute;
        width: 80vw;
        color: white;
        border-radius: 30px;
       bottom: 60px;
       left: 60px;
       border-radius: 10px;
       align-items: center;
       justify-content: center;
       padding: 20px;
    
     
};




.vue-ensemble-button{

    top: 60px;
    right: 60px;
    color: white;
    z-index: 100;
    padding: 15px;
    border-radius: 60px;
    font-size: 0.7rem;}

}

